<resources>
    <string name="app_name">CNC Torna</string>
    <string name="yellow_metal">Pirinç</string>
    <string name="titanium">Titanyum</string>
    <string name="steel">Çelik</string>
    <string name="stainless_steel">Paslanmaz Çelik</string>
    <string name="nickel">Nikel</string>
    <string name="metal">Metal</string>
    <string name="copper">Bakır</string>
    <string name="cast_iron">Döküm Demir</string>
    <string name="bronze">Bronz</string>
    <string name="aluminum">Alüminyum</string>
    <string name="solution_partners">Çözüm Ortakları</string>
    <string name="products">Ürün Gruplarımız</string>
    <string name="plastic">Plastik</string>
    <string name="our_services">Hizmetlerimiz</string>
    <string name="our_machine_park">Makine Parkurumuz</string>
    <string name="frequently_asked_questions">Sıkça Sorulan Sorular</string>
    <string name="communication">İletişim</string>
    <string name="about_us">Hakkımızda</string>
    <string name="about_us_label">Hakkımızda</string>
    <string name="about_us_header">Yıllardır Fikirlerinizi Gerçekleştiriyoruz</string>
    <string name="about_us_details">20 yılı aşkın süredir, farklı sektörlerdeki değerli müşterilerimize hassas bileşenler sunuyoruz.\nMükemmel kalitemiz, zamanında teslimatlar, rekabetçi fiyatlandırma ve mükemmel müşteri hizmetlerimizle gurur duyuyoruz . İşleme ihtiyaçlarının ve gereksinimlerinin endüstriler arasında farklılık gösterdiğini ve her projenin son derece uzmanlaşmış bir yaklaşım gerektirdiğini öğrendik. Bizi tercih edilen seçenek yapan şey budur..</string>
    <string name="about_us_list_first">Müşteri Memnuniyeti</string>
    <string name="about_us_list_second">Güvenilir Hizmet</string>
    <string name="about_us_list_third">Sektörün Lideri</string>
    <string name="about_us_list_fourth">Güçlü Kadro</string>
    <string name="about_us_list_fifth">7x24 Whatsapp Desteği</string>
    <string name="about_us_list_sixth">Öncü Hizmet</string>
    <string name="services_label">Hizmetler</string>
    <string name="services_header">Hizmetlerimiz</string>
    <string name="machine_park_label">Tesisimizi Tanıyın</string>
    <string name="machine_park_header">Makine Parkurumuz</string>
    <string name="principles_label">İlkelerimiz</string>
    <string name="principles_header">Sizlere Neler Sunuyoruz?</string>
    <string name="first_principle_header">Seri İmalatın Hızlı Çözümü</string>
    <string name="first_principle_details">Teknolojik mükemmeliyetle donanmış CNC atölyemiz, seri imalatın lideri olarak sizin yanınızda. Hızlı, hassas ve ölçülebilir üretim süreçlerimizle, projelerinizi zamandan tasarruf ederek hayata geçiriyoruz.</string>
    <string name="second_principle_header">Hassas İmalatın Ötesinde</string>
    <string name="second_principle_details">Teknolojik bir dokunuşla, hassas imalatın zirvesine ulaşın! CNC atölyemizde, en ince detaylara kadar titizlikle çalışarak özel tasarım parçalarınızı üretiyoruz. Endüstri standartlarını aşan hassasiyetimizle, her projenize profesyonel bir dokunuş katıyoruz.</string>
    <string name="third_principle_header">Uygun Fiyat Mükemmel İmalat</string>
    <string name="third_principle_details">Teknolojiyi uygun fiyatlarla bir araya getiriyoruz! CNC atölyemizde kaliteli üretimi erişilebilir bütçenizde sunuyoruz. Müşteri memnuniyetini ön planda tutarak, uygun fiyatlı çözümlerimizle öne çıkıyoruz.</string>
    <string name="fourth_principle_header">Zamanın Ötesinde Teslimat</string>
    <string name="fourth_principle_details">Teknoloji ve zamanın mükemmel uyumu! CNC atölyemizde, projelerinizin zamanında ve sorunsuz bir şekilde teslim edilmesini garanti ediyoruz. İleri teknoloji ekipmanlarımız ve deneyimli ekibimizle, her detayı zamanında tamamlıyoruz.</string>
    <string name="stats_label">Sayılarla Biz</string>
    <string name="stats_header">Bugüne Kadar Neler Yaptık?</string>
    <string name="first_stat_header">400+</string>
    <string name="first_stat_details">PROJE</string>
    <string name="second_stat_header">100.000+</string>
    <string name="second_stat_details">PARÇA ÜRETİMİ</string>
    <string name="third_stat_header">6</string>
    <string name="third_stat_details">HİZMET ÇEŞİDİ</string>
    <string name="fourth_stat_header">850+</string>
    <string name="fourth_stat_details">YARDIM TALEBİ</string>
    <string name="fifth_stat_header">6</string>
    <string name="fifth_stat_details">FİRMA ÇALIŞANI</string>
    <string name="communication_banner_header">Aklınızda Bir Projeniz Varsa\nHemen Bizimle İletişime Geçin.</string>
    <string name="communication_banner_button_text">İletişime Geç</string>
    <string name="products_label">Ürünlerimiz</string>
    <string name="products_header">Servis ve Ürün Gruplarımız</string>
    <string name="communication_header">Bizimle Çalışmaya Hazır mısınız?</string>
    <string name="communication_details">İletişim bilgilerimizden bize gün içi her saat ulaşabilirsiniz. İlgili tüm konularda sizlere her konuda destek vermekten büyük mutluluk duyarız.</string>
    <string name="address_header">Merkez Şube</string>
    <string name="address_details">İkitelli/İstanbul</string>
    <string name="phone_header">Cep Telefonu</string>
    <string name="phone_details">0 544 170 86 84</string>
    <string name="whatsapp_header">Whatsapp</string>
    <string name="whatsapp_details">05441708684</string>
    <string name="email_header">Email</string>
    <string name="email_details">cnctornanet@gmail.com</string>
    <string name="main_page">Anasayfa</string>
    <string name="institutional">Kurumsal</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="cnc_automat_sliding_head_cnc">CNC Otomat / CNC Kayar Otomat</string>
    <string name="cnc_lathe">CNC Torna</string>
    <string name="cnc_milling">CNC Freze</string>
    <string name="thread_rolling">Ovalama</string>
    <string name="machine_spare_parts">Makine Yedek Parça</string>
    <string name="capstan_lathe">Revolver İşleme</string>
    <string name="firstQuestion">CNC işleme hizmetleriniz neleri kapsıyor?</string>
    <string name="firstAnswer">Atölyemiz, CNC Otomat / CNC Kayar Otomat, CNC Torna, CNC Freze, Ovalama, Makine Yedek Parça ve Revolver İşleme gibi geniş bir yelpazede metal işleme hizmetleri sunmaktadır. Her türlü metal projenize çözüm üretebilmek adına uzmanlık alanlarımızı genişletiyoruz.</string>
    <string name="secondQuestion">Projelerimi sizinle nasıl başlatabilirim?</string>
    <string name="secondAnswer">Projelerinizi başlatmak için bize ulaşabilir veya atölyemizi ziyaret edebilirsiniz. Uzman ekibimiz, ihtiyaçlarınıza yönelik en etkili çözümü bulmak ve projenizi şekillendirmek için sizinle işbirliği yapmaya hazır.</string>
    <string name="thirdQuestion">Kalite standartlarınız nelerdir?</string>
    <string name="thirdAnswer">Atölyemiz, yüksek kalite standartlarına bağlı kalarak her aşamada mükemmelliği hedefler. Kalite kontrol süreçlerimizle, müşterilerimize güvenilir ve üst düzeydeki ürünleri temin etmeyi taahhüt ederiz.</string>
    <string name="fourthQuestion">Teslimat süreçleriniz nasıl işliyor?</string>
    <string name="perspective_to_sector_header">Sektöre Bakışımız</string>
    <string name="perspective_to_sector_details">Metal işleme dünyasında uzun yılların birikimi ve teknolojinin en son yenilikleriyle donanmış olarak sizlere en üst düzeyde hizmet sunmaktan gurur duyuyoruz. CNC Otomat / CNC Kayar Otomat, CNC Torna, CNC Freze, Ovalama, Makine Yedek Parça ve Revolver İşleme alanlarında uzmanlaşmış atölyemizde, metalin dönüşümünü sanata çeviriyoruz.\n\nMüşterilerimize özel çözümler sunan, kaliteden ödün vermeyen ve projelerinizi başarıya taşıyan bir ekibiz. İnovasyonu ve gelişimi ilke edinerek, sektördeki en son teknoloji ve en etkili işleme yöntemlerini kullanarak projelerinizi mükemmelliğe taşıyoruz.\n\nMüşteri memnuniyetini her şeyin önünde tutuyoruz. Şeffaf iletişim, zamanında teslimat ve kalite standartlarımızla sizlere değer katacak iş çözümleri sunuyoruz. Metal işleme sektöründe lider olma vizyonumuzla, projelerinizi en üst düzeyde gerçekleştirmek için buradayız.\n\nMetalin gücünü ve estetiğini birleştirerek, her bir projenin arkasında duruyoruz. Sizlere en kaliteli hizmeti sunmak için buradayız. Detaylarınıza özen gösterirken, vizyonunuzu gerçekleştirmek için sabırsızlanıyoruz. Metalin büyülü dünyasına adım atın, işlerinizi bir üst seviyeye taşıyın.</string>
    <string name="your_solution_partner_header">Çözüm Ortağınız</string>
    <string name="your_solution_partner_details">Çözüm ortağınız olarak size değer katmak, projelerinizi zirveye taşımak için buradayız. Detaylarınıza önem veriyor, işlerinizi birlikte şekillendirmek için sabırsızlanıyoruz. Bize ulaşın ve işbirliğimizin başlamasına ilk adımı atın!</string>
    <string name="your_solution_partner_list_first">Teknolojiye yatırım</string>
    <string name="your_solution_partner_list_second">Esnek ve özelleştirilebilir çözümler</string>
    <string name="your_solution_partner_list_third">Kalite standartları</string>
    <string name="your_solution_partner_list_fourth">Deneyimli ekip</string>
    <string name="your_solution_partner_list_fifth">Hızlı ve güvenilir hizmet</string>
    <string name="what_you_wonder_header">Merak Ettikleriniz</string>
    <string name="what_you_wonder_details_first">Bu sorular ve yanıtlar, CNCTorna olarak sizlere daha açıklayıcı bir bakış sunmak adına önemli bir kaynaktır. Her bir projenin benzersiz olduğunu ve detayların önemli olduğunu biliyoruz. CNCTorna, sorularınıza cevap vermek ve projelerinizi birlikte şekillendirmek için burada. Daha fazla bilgi ve detaylı görüşme için bize ulaşın!</string>
    <string name="what_you_wonder_banner_header">Metalin Gücüne Estetik Bir Dokunuş!</string>
    <string name="what_you_wonder_banner_details">Metal işlemede, güç ve estetiği birleştiriyoruz. Her projede inovasyon ve kaliteyle öne çıkıyor, metalin potansiyelini en üst düzeye çıkarıyoruz.</string>
    <string name="what_you_wonder_details_second">Kalitemizden ödün vermeden, detaylara önem veren bir anlayışla çalışıyoruz. Her bir parçanın arkasındaki hikayeyi anlamak, işlerinizi benzersiz kılmak için bize olanak tanır. Modern teknoloji ile geleneksel zanaatkarlığın birleşimi, projelerinizi özel kılar ve işbirliği yapmanın ayrıcalığını hissettirir.</string>
    <string name="communication_button_text">İletişim</string>
    <string name="what_you_wonder_details_third">Müşteri memnuniyetini en üst düzeye çıkarmayı hedefleyen bir ekip olarak, metal işleme sektöründeki başarılarınıza değer katmak için buradayız. Her bir işimizde metalin güzelliklerini yakalamak, projelerinizi bir adım öteye taşımak için yanınızdayız.</string>
    <string name="our_mission_header">Misyonumuz</string>
    <string name="our_mission_details">CNCTorna, metal işleme sektöründe öncü bir misyonla yola çıkmıştır. Müşteri memnuniyetini en üst seviyede tutarak, her bir projede estetik ve fonksiyonu birleştiren çözümler sunmayı hedefleriz. Yüksek kalite standartlarına bağlılık, sürekli iyileşme ve teknolojiye yatırım, atölyemizin temel taahhütlerindendir. Müşterilerimizin işlerini daha etkili ve başarılı hale getirmelerine yardımcı olmak, atölyemizin misyonunda öne çıkan bir unsurdur.</string>
    <string name="our_vision_header">Vizyonumuz</string>
    <string name="our_vision_details">CNCTorna; metal işleme sektöründe ileri teknoloji, sürdürülebilir inovasyon ve mükemmellikle tanınan bir lider olmayı vizyon edinir. Müşterilerimize değer katan çözümlerimizle sektörde fark yaratmayı amaçlarken, sürdürülebilirlik ve toplumsal sorumluluk anlayışıyla geleceğe yönelik kalıcı etkiler bırakmayı hedefleriz. Yaratıcı çözümlerimiz, güçlü iş ortaklıklarımız ve sürekli gelişme anlayışımızla atölyemiz, metal işleme sektörünün öncüsü olmaya devam edecektir.</string>
    <string name="footer">CNC Torna</string>
</resources>