<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/headerImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/picheader"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/headerImageView"
                app:layout_constraintEnd_toEndOf="@+id/headerImageView"
                app:layout_constraintStart_toStartOf="@+id/headerImageView"
                app:layout_constraintTop_toTopOf="@+id/headerImageView" />

            <ImageView
                android:id="@+id/perspectiveToSectorImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/about"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerImageView" />

            <TextView
                android:id="@+id/perspectiveToSectorHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text= "@string/perspective_to_sector_header"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/perspectiveToSectorImageView" />

            <TextView
                android:id="@+id/perspectiveToSectorDetailsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/perspective_to_sector_details"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/perspectiveToSectorHeaderText" />

            <TextView
                android:id="@+id/yourSolutionPartnerHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingHorizontal="16dp"
                android:text= "@string/your_solution_partner_header"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/perspectiveToSectorDetailsText" />

            <TextView
                android:id="@+id/yourSolutionPartnerListFirstText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:background="@drawable/your_solution_partner_list_text_background"
                android:text="@string/your_solution_partner_list_first"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yourSolutionPartnerHeaderText" />

            <TextView
                android:id="@+id/yourSolutionPartnerListSecondText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:background="@drawable/your_solution_partner_list_text_background"
                android:text="@string/your_solution_partner_list_second"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yourSolutionPartnerListFirstText" />

            <TextView
                android:id="@+id/yourSolutionPartnerListThirdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:background="@drawable/your_solution_partner_list_text_background"
                android:text="@string/your_solution_partner_list_third"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yourSolutionPartnerListSecondText" />

            <TextView
                android:id="@+id/yourSolutionPartnerListFourthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:background="@drawable/your_solution_partner_list_text_background"
                android:text="@string/your_solution_partner_list_fourth"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yourSolutionPartnerListThirdText" />

            <TextView
                android:id="@+id/yourSolutionPartnerListFifthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:background="@drawable/your_solution_partner_list_text_background"
                android:text="@string/your_solution_partner_list_fifth"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yourSolutionPartnerListFourthText" />

            <TextView
                android:id="@+id/yourSolutionPartnerDetailsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/your_solution_partner_details"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yourSolutionPartnerListFifthText" />

            <TextView
                android:id="@+id/whatYouWonderHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingHorizontal="16dp"
                android:text= "@string/what_you_wonder_header"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yourSolutionPartnerDetailsText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/whatYouWonderRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whatYouWonderHeaderText" />

            <TextView
                android:id="@+id/whatYouWonderDetailsFirstText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/what_you_wonder_details_first"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whatYouWonderRecyclerView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/whatYouWonderBannerCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/dark_blue"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whatYouWonderDetailsFirstText">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="32dp" >

                    <TextView
                        android:id="@+id/whatYouWonderBannerHeaderText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/what_you_wonder_banner_header"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/whatYouWonderBannerDetailsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/what_you_wonder_banner_details"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintTop_toBottomOf="@+id/whatYouWonderBannerHeaderText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/whatYouWonderDetailsSecondText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/what_you_wonder_details_second"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whatYouWonderBannerCardView" />

            <Button
                android:id="@+id/communicationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/communication_button_text"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:backgroundTint="@color/blue"
                app:drawableLeftCompat="@drawable/smart_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whatYouWonderDetailsSecondText" />

            <TextView
                android:id="@+id/whatYouWonderDetailsThirdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/what_you_wonder_details_third"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/communicationButton" />

            <TextView
                android:id="@+id/ourMissionHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingHorizontal="16dp"
                android:text= "@string/our_mission_header"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whatYouWonderDetailsThirdText" />

            <TextView
                android:id="@+id/ourMissionDetailsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/our_mission_details"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ourMissionHeaderText" />

            <TextView
                android:id="@+id/ourVisionHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingHorizontal="16dp"
                android:text= "@string/our_vision_header"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ourMissionDetailsText" />

            <TextView
                android:id="@+id/ourVisionDetailsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/our_vision_details"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ourVisionHeaderText" />

            <TextView
                android:id="@+id/footerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:background="@color/dark_blue"
                android:textColor="@color/white"
                android:text="@string/footer"
                android:textSize="24sp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ourVisionDetailsText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
